[gd_scene load_steps=5 format=3 uid="uid://cqiq075yf53g2"]

[ext_resource type="Texture2D" uid="uid://6pne2ccagldk" path="res://images/ui/emptybutton.png" id="1_dteeq"]
[ext_resource type="Theme" uid="uid://benif35do1jnk" path="res://theme/main.theme" id="1_hmdvj"]
[ext_resource type="Script" uid="uid://cvyvopgd564eq" path="res://instances/btn_texture.gd" id="3_bsuv8"]

[sub_resource type="LabelSettings" id="LabelSettings_rorhl"]
font_size = 28

[node name="btn" type="Control"]
self_modulate = Color(0.54902, 0.752941, 0.992157, 1)
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 300.0
pivot_offset = Vector2(150, 150)
theme = ExtResource("1_hmdvj")
script = ExtResource("3_bsuv8")
metadata/_edit_group_ = true

[node name="tex_rect_shadow" type="TextureRect" parent="."]
unique_name_in_owner = true
self_modulate = Color(0, 0, 0, 0.133333)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.09329, 1.09329)
pivot_offset = Vector2(150, 150)
mouse_filter = 2
texture = ExtResource("1_dteeq")
expand_mode = 1
stretch_mode = 5

[node name="tex_rect" type="TextureRect" parent="."]
unique_name_in_owner = true
self_modulate = Color(0.54902, 0.752941, 0.992157, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -28.6584
offset_bottom = -28.6584
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150, 150)
mouse_filter = 2
texture = ExtResource("1_dteeq")
expand_mode = 1
stretch_mode = 5

[node name="vb" type="VBoxContainer" parent="tex_rect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.218166
pivot_offset = Vector2(150, 150)
mouse_filter = 2
alignment = 1

[node name="lb_title" type="Label" parent="tex_rect/vb"]
unique_name_in_owner = true
layout_mode = 2
text = "Easy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lb_sub" type="Label" parent="tex_rect/vb"]
unique_name_in_owner = true
layout_mode = 2
text = "3 Levels"
label_settings = SubResource("LabelSettings_rorhl")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
